BEM-page-second

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,21 +59,31 @@
       <!-- B U T T O N S  -->
       <!--  -->
       <section>
-        <ul class="button-grups">
-          <li class="btn">
-            <button type="button" class="btn__all btn--theme">Wszystkie</button>
+        <ul class="button-list">
+          <li class="button__unit">
+            <button type="button" class="button__unit__all button__unit--style">
+              Wszystkie
+            </button>
           </li>
-          <li class="btn">
-            <button type="button" class="btn__sites btn--theme">Strony</button>
+          <li class="button__unit">
+            <button type="button" class="button__unit__sites button__unit--style">
+              Strony
+            </button>
           </li>
-          <li class="btn">
-            <button type="button" class="btn__apps btn--theme">Aplikacje</button>
+          <li class="button__unit">
+            <button type="button" class="button__unit__apps button__unit--style">
+              Aplikacje
+            </button>
           </li>
-          <li class="btn">
-            <button type="button" class="btn-design btn--theme">Dizajn</button>
+          <li class="button__unit">
+            <button type="button" class="button__unit-design button__unit--style">
+              Dizajn
+            </button>
           </li>
-          <li class="btn">
-            <button type="button" class="btn-marketing btn--theme">Marketing</button>
+          <li class="button__unit">
+            <button type="button" class="button__unit-marketing button__unit--style">
+              Marketing
+            </button>
           </li>
         </ul>
       </section>
@@ -81,127 +91,133 @@
       <!-- P I C T U R E S  -->
       <!--  -->
       <section>
-        <div class="container">
-          <ul class="card-set">
-            <li class="pictures">
-              <div class="box img-tech">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+        <div class="products">
+          <div class="products__container">
+            <ul class="products__list">
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-one">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Technocrack</p>
-              <p class="pictrures--summary">Strona internetowa</p>
-            </li>
+                <p class="products__heading">Technocrack</p>
+                <p class="products__summary">Strona internetowa</p>
+              </li>
 
-            <li class="pictures">
-              <div class="box img-diz">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-two">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Grafika New Orlean vs Golden Star</p>
-              <p class="pictrures--summary">Dizajn</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-ap">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Grafika New Orlean vs Golden Star</p>
+                <p class="products__summary">Dizajn</p>
+              </li>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-three">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Restauracja Seafood</p>
-              <p class="pictrures--summary">Aplikacja</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-prime">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Restauracja Seafood</p>
+                <p class="products__summary">Aplikacja</p>
+              </li>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-four">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Projekt Prime</p>
-              <p class="pictrures--summary">Marketing</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-pro">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Projekt Prime</p>
+                <p class="products__summary">Marketing</p>
+              </li>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-five">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Projekt Boxes</p>
-              <p class="pictrures--summary">Aplikacja</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-insp">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Projekt Boxes</p>
+                <p class="products__summary">Aplikacja</p>
+              </li>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-six">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Inspiration has no Borders</p>
-              <p class="pictrures--summary">Strona internetowa</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-mag">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Inspiration has no Borders</p>
+                <p class="products__summary">Strona internetowa</p>
+              </li>
+              <li class="products__picture">
+                <div class="products__picture__box products__picture__box--img-seven">
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Magazyn Limited Edition</p>
-              <p class="pictrures--summary">Dizajn</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-lab">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Magazyn Limited Edition</p>
+                <p class="products__summary">Dizajn</p>
+              </li>
+              <li class="products__picture">
+                <div
+                  class="products__picture__box products__picture__box--img-seven-eight"
+                >
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Projekt LAB</p>
-              <p class="pictrures--summary">Marketing</p>
-            </li>
-            <li class="pictures">
-              <div class="box img-gro">
-                <div class="overlay">
-                  <p>
-                    Technocrack jest popularną platformą wykorzystywaną do
-                    rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
-                    celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
-                  </p>
+                <p class="products__heading">Projekt LAB</p>
+                <p class="products__summary">Marketing</p>
+              </li>
+              <li class="products__picture">
+                <div
+                  class="products__picture__box products__picture__box--img-seven-nine"
+                >
+                  <div class="products__picture__slider">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
+                      celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <p class="pictures--heading">Growing Business</p>
-              <p class="pictrures--summary">Aplikacja</p>
-            </li>
-          </ul>
+                <p class="products__heading">Growing Business</p>
+                <p class="products__summary">Aplikacja</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
