--- a/index.html
+++ b/index.html
@@ -185,25 +185,25 @@
 
                 <div class="team__person__social">
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -224,25 +224,25 @@
                 </figure>
                 <div class="team__person__social">
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -263,25 +263,25 @@
                 </figure>
                 <div class="team__person__social">
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="team__person__social__unit">
-                    <svg class="team__person__social__unit__icon">
+                    <svg class="team__person__social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -301,25 +301,25 @@
                   </figcaption>
                   <div class="team__person__social">
                     <div class="team__person__social__unit">
-                      <svg class="team__person__social__unit__icon">
+                      <svg class="team__person__social__icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </div>
 
                     <div class="team__person__social__unit">
-                      <svg class="team__person__social__unit__icon">
+                      <svg class="team__person__social__icon">
                         <use href="./images/icons.svg#icon-tweet"></use>
                       </svg>
                     </div>
 
                     <div class="team__person__social__unit">
-                      <svg class="team__person__social__unit__icon">
+                      <svg class="team__person__social__icon">
                         <use href="./images/icons.svg#icon-face"></use>
                       </svg>
                     </div>
 
                     <div class="team__person__social__unit">
-                      <svg class="team__person__social__unit__icon">
+                      <svg class="team__person__social__icon">
                         <use href="./images/icons.svg#icon-linke"></use>
                       </svg>
                     </div>
@@ -416,25 +416,25 @@
                 <span class="footer__heading">DOŁĄCZ DO NAS</span>
                 <div class="footer__social">
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
