--- a/portfolio.html
+++ b/portfolio.html
@@ -262,25 +262,25 @@
                 <span class="footer__heading">DOŁĄCZ DO NAS</span>
                 <div class="footer__social">
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__item__icon">
+                    <svg class="footer__social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
