--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
           <ul class="offer__list">
             <li class="offer__image">
               <img src="./images/img2.jpg" width="370" height="294" alt="computer" />
-              <figcaption class="what-we-do">Aplikacje komputerowe</figcaption>
+              <figcaption class="offer__content">Aplikacje komputerowe</figcaption>
             </li>
             <li class="offer__image">
               <img src="./images/img1.jpg" width="370" height="294" alt="phone" />
-              <figcaption class="what-we-do">Aplikacje mobilne</figcaption>
+              <figcaption class="offer__content">Aplikacje mobilne</figcaption>
             </li>
             <li class="offer__image">
               <img src="./images/img3.jpg" width="370" height="294" alt="tablet" />
-              <figcaption class="what-we-do">Rozwiązania graficzne</figcaption>
+              <figcaption class="offer__content">Rozwiązania graficzne</figcaption>
             </li>
           </ul>
         </div>
