--- a/index.html
+++ b/index.html
@@ -20,38 +20,42 @@
     <header class="header">
       <div class="header__container">
         <div class="navbar">
-          <a href="index.html" class="logo"><span class="logo--color">Web</span>Studio</a>
+          <div class="navbar__container">
+            <a href="index.html" class="logo"
+              ><span class="logo--color">Web</span>Studio</a
+            >
+            <nav class="navbar__menu">
+              <ul class="navbar__list">
+                <li>
+                  <a href="index.html" class="link active">Agencja </a>
+                </li>
+                <li><a href="portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="/" class="link">Kontakt</a></li>
+              </ul>
+            </nav>
 
-          <nav class="navbar__container">
-            <ul class="navbar__menu">
-              <li>
-                <a href="index.html" class="link active">Agencja </a>
-              </li>
-              <li><a href="portfolio.html" class="link">Portfolio</a></li>
-              <li><a href="/" class="link">Kontakt</a></li>
-            </ul>
-          </nav>
+            <div class="navbar__menu">
+              <ul class="navbar__list">
+                <li>
+                  <a href="mailto:info@devstudio.com" class="link link--gray">
+                    <svg class="link__icon-email">
+                      <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    <span>info@devstudio.com</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="tel:+48111111111" class="link link--gray">
+                    <svg class="link__icon-phone">
+                      <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    <span>+48 111 111 111</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <nav>
-          <ul class="navbar__contact">
-            <li>
-              <a href="mailto:info@devstudio.com" class="link link--gray">
-                <svg class="link__icon-email">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                <span>info@devstudio.com</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:+48111111111" class="link link--gray">
-                <svg class="link__icon-phone">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                <span>+48 111 111 111</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
       </div>
     </header>
 
@@ -60,15 +64,11 @@
       <!-- E F F E C T I V E  S O L U T I O N S -->
       <!--  -->
       <div class="slider">
-        <div class="slider__image">
-          <div class="slider__container">
-            <h1 class="slider__heading">
-              EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU
-            </h1>
-            <button type="button" class="slider__button" data-modal-open>
-              Zamów usługę
-            </button>
-          </div>
+        <div class="slider__container">
+          <h1 class="slider__heading">EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
+          <button type="button" class="slider__button" data-modal-open>
+            Zamów usługę
+          </button>
         </div>
       </div>
 
