--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
         <div class="offer__container">
           <h2 class="offer__heading">Czym się zajmujemy</h2>
           <ul class="offer__list">
-            <li class="offer__image">
+            <li class="offer_item">
               <img src="./images/img2.jpg" width="370" height="294" alt="computer" />
               <figcaption class="offer__content">Aplikacje komputerowe</figcaption>
             </li>
-            <li class="offer__image">
+            <li class="offer_item">
               <img src="./images/img1.jpg" width="370" height="294" alt="phone" />
               <figcaption class="offer__content">Aplikacje mobilne</figcaption>
             </li>
-            <li class="offer__image">
+            <li class="offer_item">
               <img src="./images/img3.jpg" width="370" height="294" alt="tablet" />
               <figcaption class="offer__content">Rozwiązania graficzne</figcaption>
             </li>
@@ -165,169 +165,167 @@
       <!-- O U R  T E A M -->
       <!--  -->
       <section class="team">
-        <div class="team__background">
-          <div class="team__container">
-            <h2 class="team__heading">Nasz zespół</h2>
-            <ul class="team__person">
-              <li class="team__person__frame">
-                <figure>
-                  <img
-                    src="./images/person1.jpg"
-                    width="270"
-                    height="260"
-                    alt="Product-Designer"
-                  />
-                  <figcaption class="team__person__name">
-                    <h3>John Doe</h3>
-                    <p class="team__person__specialization">Product Designer</p>
-                  </figcaption>
-                </figure>
+        <div class="team__container">
+          <h2 class="team__heading">Nasz zespół</h2>
+          <ul class="team__list">
+            <li class="team__frame">
+              <figure>
+                <img
+                  src="./images/person1.jpg"
+                  width="270"
+                  height="260"
+                  alt="Product-Designer"
+                />
+                <figcaption class="team__caption">
+                  <h3>John Doe</h3>
+                  <p class="team__spec">Product Designer</p>
+                </figcaption>
+              </figure>
 
-                <div class="team__person__social">
-                  <div class="team__person__social__unit">
-                    <svg class="footer__social__icon">
+              <div class="social">
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-insta"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-tweet"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-face"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-linke"></use>
+                  </svg>
+                </div>
+              </div>
+            </li>
+            <li class="team__frame">
+              <figure>
+                <img
+                  src="./images/person2.jpg"
+                  width="270"
+                  height="260"
+                  alt="Fronted-Developer"
+                />
+                <figcaption class="team__caption">
+                  <h3>John Doe</h3>
+                  <p class="team__spec">Fronted Developer</p>
+                </figcaption>
+              </figure>
+              <div class="social">
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-insta"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-tweet"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-face"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-linke"></use>
+                  </svg>
+                </div>
+              </div>
+            </li>
+            <li class="team__frame">
+              <figure>
+                <img
+                  src="./images/person3.jpg"
+                  width="270"
+                  height="260"
+                  alt="Marketing"
+                />
+                <figcaption class="team__caption">
+                  <h3>John Doe</h3>
+                  <p class="team__spec">Marketing</p>
+                </figcaption>
+              </figure>
+              <div class="social">
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-insta"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-tweet"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-face"></use>
+                  </svg>
+                </div>
+
+                <div class="social__container">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-linke"></use>
+                  </svg>
+                </div>
+              </div>
+            </li>
+            <li class="team__frame">
+              <figure>
+                <img
+                  src="./images/person4.jpg"
+                  width="270"
+                  height="260"
+                  alt="UI-Designer"
+                />
+                <figcaption class="team__caption">
+                  <h3>John Doe</h3>
+                  <p class="team__spec">UI Designer</p>
+                </figcaption>
+                <div class="social">
+                  <div class="social__container">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
+                  <div class="social__container">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
+                  <div class="social__container">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
+                  <div class="social__container">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
                 </div>
-              </li>
-              <li class="team__person__frame">
-                <figure>
-                  <img
-                    src="./images/person2.jpg"
-                    width="270"
-                    height="260"
-                    alt="Fronted-Developer"
-                  />
-                  <figcaption class="team__person__name">
-                    <h3>John Doe</h3>
-                    <p class="team__person__specialization">Fronted Developer</p>
-                  </figcaption>
-                </figure>
-                <div class="team__person__social">
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-tweet"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-face"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-linke"></use>
-                    </svg>
-                  </div>
-                </div>
-              </li>
-              <li class="team__person__frame">
-                <figure>
-                  <img
-                    src="./images/person3.jpg"
-                    width="270"
-                    height="260"
-                    alt="Marketing"
-                  />
-                  <figcaption class="team__person__name">
-                    <h3>John Doe</h3>
-                    <p class="team__person__specialization">Marketing</p>
-                  </figcaption>
-                </figure>
-                <div class="team__person__social">
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-tweet"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-face"></use>
-                    </svg>
-                  </div>
-
-                  <div class="team__person__social__unit">
-                    <svg class="team__person__social__icon">
-                      <use href="./images/icons.svg#icon-linke"></use>
-                    </svg>
-                  </div>
-                </div>
-              </li>
-              <li class="team__person__frame">
-                <figure>
-                  <img
-                    src="./images/person4.jpg"
-                    width="270"
-                    height="260"
-                    alt="UI-Designer"
-                  />
-                  <figcaption class="team__person__name">
-                    <h3>John Doe</h3>
-                    <p class="team__person__specialization">UI Designer</p>
-                  </figcaption>
-                  <div class="team__person__social">
-                    <div class="team__person__social__unit">
-                      <svg class="team__person__social__icon">
-                        <use href="./images/icons.svg#icon-insta"></use>
-                      </svg>
-                    </div>
-
-                    <div class="team__person__social__unit">
-                      <svg class="team__person__social__icon">
-                        <use href="./images/icons.svg#icon-tweet"></use>
-                      </svg>
-                    </div>
-
-                    <div class="team__person__social__unit">
-                      <svg class="team__person__social__icon">
-                        <use href="./images/icons.svg#icon-face"></use>
-                      </svg>
-                    </div>
-
-                    <div class="team__person__social__unit">
-                      <svg class="team__person__social__icon">
-                        <use href="./images/icons.svg#icon-linke"></use>
-                      </svg>
-                    </div>
-                  </div>
-                </figure>
-              </li>
-            </ul>
-          </div>
+              </figure>
+            </li>
+          </ul>
         </div>
       </section>
       <!--  -->
@@ -419,25 +417,25 @@
                 <span class="footer__heading">DOŁĄCZ DO NAS</span>
                 <div class="footer__social">
                   <div class="footer__social__item">
-                    <svg class="footer__social__icon">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__icon">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__icon">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
                   <div class="footer__social__item">
-                    <svg class="footer__social__icon">
+                    <svg class="social__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
