--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <header class="header">
       <div class="header__container">
         <div class="navbar">
+          <a href="index.html" class="logo"><span class="logo--color">Web</span>Studio</a>
           <div class="navbar__container">
-            <a href="index.html" class="logo"
-              ><span class="logo--color">Web</span>Studio</a
-            >
             <nav class="navbar__menu">
               <ul class="navbar__list">
                 <li>
